Added run configuration to README